first changes summary

--- a/summary_style.css
+++ b/summary_style.css
@@ -130,3 +130,13 @@ body{
     color: #2A3647;
     margin: 0;
 }
+
+.summary{
+    display: flex;
+}
+
+.summary-information{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
