--- a/contacts_style.css
+++ b/contacts_style.css
@@ -12,18 +12,20 @@ h3 {
     display: flex;
     flex-direction: row;
     width: 1024px;
-    min-height: 800px;
+    height: 100vh;
 }
 
 /* Left side of Page  */
 
 .all-contacts {
     width: 35%;
+    max-height: 90vh;
     background-color: rgb(255, 255, 255);
-    margin-top: 20px;
+    margin-top: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-y: auto;
 }
 
 .alphabet-box {
