--- a/summary_style.css
+++ b/summary_style.css
@@ -15,86 +15,92 @@ body{
     position: relative;
 }
 
-.nav-bar{
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: #2A3647;
-    width: 16%;
-    height: 100vh;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.nav-bar img{
-    width: 100px;
-    object-fit: contain;
-    margin-top: 66px;
-}
-
-.content-section{
-    width: 100%;
-    height: 46px;
-    display: flex;
-    align-items: center;
-    color: white;
-    box-sizing: border-box;
-    padding-left: 18%;
-    margin: 4px 0px;
-}
-
-.content-section:hover{
-    cursor: pointer;
-    background-color: #091931;
-}
-
-.content-section div{
-    width: 30px;
-    display: flex;
-    justify-content: center;
-    margin-right: 10%;
-}
-
-.content-section img{
-    height: 24px;
-    width: unset;
-    object-fit: contain;
-    margin: unset;
-}
-
-.topper{
-    z-index: 1;
-    position: absolute;
-    top: 0;
-    right: 0;
-    background-color: white;
-    width: 84%;
-    height: 89px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-left: 8%;
-    padding-right: 33px;
-    box-sizing: border-box;
-    box-shadow: 0px 4px 2px -2px grey;
-}
-
-.img-topper{
-    display: flex;
-    align-items: center;
-}
-
-.questionmark-topper{
-    width: 31px;
-    height: 31px;
-    margin-right: 24px;
-}
-
-.profile-pic{
-    border-radius: 100%;
-    border: 1px solid black;
+@media(min-width: 1024px){
+    .nav-bar{
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: #2A3647;
+        width: 16%;
+        height: 100vh;
+        box-sizing: border-box;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .nav-bar img{
+        width: 100px;
+        object-fit: contain;
+        margin-top: 66px;
+    }
+    
+    .content-section{
+        width: 100%;
+        height: 46px;
+        display: flex;
+        align-items: center;
+        color: white;
+        box-sizing: border-box;
+        padding-left: 18%;
+        margin: 4px 0px;
+    }
+    
+    .content-section:hover{
+        cursor: pointer;
+        background-color: #091931;
+    }
+    
+    .content-section div{
+        width: 30px;
+        display: flex;
+        justify-content: center;
+        margin-right: 10%;
+    }
+    
+    .content-section img{
+        height: 24px;
+        width: unset;
+        object-fit: contain;
+        margin: unset;
+    }
+    
+    .active-content-section{
+        background-color: #091931;
+    }
+    
+    .topper{
+        z-index: 1;
+        position: absolute;
+        top: 0;
+        right: 0;
+        background-color: white;
+        width: 84%;
+        height: 89px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding-left: 8%;
+        padding-right: 33px;
+        box-sizing: border-box;
+        box-shadow: 0px 4px 2px -2px rgb(195, 195, 195);
+    }
+    
+    .img-topper{
+        display: flex;
+        align-items: center;
+    }
+    
+    .questionmark-topper{
+        width: 31px;
+        height: 31px;
+        margin-right: 24px;
+    }
+    
+    .profile-pic{
+        border-radius: 100%;
+        border: 1px solid black;
+    }
 }
 
 .inner-content{
@@ -109,13 +115,13 @@ body{
 .headline{
     display: flex;
     align-items: center;
-    margin-left: 8.5%;
-    margin-top: 82px;
-    margin-bottom: 87px;
+    margin-left: 10%;
+    margin-top: 48px;
+    margin-bottom: 54px;
 }
 
 .headline h1{
-    font-size: 61px;
+    font-size: 50px;
     margin: 0;
 }
 
@@ -126,17 +132,146 @@ body{
 }
 
 .headline span{
-    font-size: 27px;
+    font-size: 24px;
     color: #2A3647;
     margin: 0;
 }
 
 .summary{
     display: flex;
+    width: 100%;
+    padding-left: 10%;
+    box-sizing: border-box;
 }
 
 .summary-information{
     display: flex;
+    flex-direction: column;
+    width: 48%;
+}
+
+.first-row{
+    display: flex;
+    width: 100%;
     justify-content: space-between;
-    flex-wrap: wrap;
+}
+
+.first-row div{
+    width: 29%;
+    aspect-ratio: 1 / 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 30px;
+    background-color: white;
+    text-align: center;
+}
+
+.first-row h2{
+    font-size: 48px;
+    margin: 0;
+}
+
+.first-row span{
+    width: 64px;
+    font-size: 18px;
+}
+
+.second-row{
+    width: 100%;
+    aspect-ratio: 3.9 / 1;
+    margin: 6.5% 0px;
+    border-radius: 30px;
+    background-color: white;
+    display: flex;
+    align-items: center;
+}
+
+.second-row div{
+    display: flex;
+    align-items: center;
+}
+
+.urgent-tasks{
+    height: 72%;
+    width: 46%;
+    border-right: 2px solid rgb(187, 187, 187);
+    justify-content: space-evenly;
+    box-sizing: border-box;
+    padding-left: 5%;
+}
+
+.urgent-tasks img{
+    height: 46px;
+    object-fit: contain;
+}
+
+.urgent-tasks div{
+    flex-direction: column;
+    text-align: center;
+}
+
+.urgent-tasks h2{
+    margin: 0;
+    font-size: 38px;
+}
+
+.upcoming-deadline{
+    flex-direction: column;
+    width: 52%;
+    align-items: unset !important;
+    padding-left: 12%;
+    box-sizing: border-box;
+}
+
+.third-row{
+    display: flex;
+    justify-content: space-between;
+}
+
+.third-row div{
+    width: 47%;
+    aspect-ratio: 100 / 55;
+    border-radius: 30px;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.content-div-row-3{
+    flex-direction: column;
+    width: unset !important;
+}
+
+.third-row img{
+    height: 50px;
+    object-fit: contain;
+    margin-right: 16%;
+}
+
+.third-row h2{
+    font-size: 48px;
+    margin: 0;
+}
+
+.greeting{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: #2A3647;
+    font-size: 48px;
+    padding-left: 7%;
+}
+
+.greeting_name{
+    color: #29ABE2;
+    font-weight: 700;
+    font-size: 54px;
+}
+
+.d-none{
+    display: none;
 }
