--- a/assets/templates/destop_template.html
+++ b/assets/templates/destop_template.html
@@ -1,30 +1,30 @@
 <div class="nav-bar">
     <img src="assets/img/logo_lefter.png">
-    <div class="content-section active-content-section" style="margin-top: 100px;">
+    <div class="content-section" style="margin-top: 100px;" id="summary-section">
         <div>
             <img src="assets/img/icon-summary.png">
         </div>
         <span>Summary</span>
     </div>
-    <div class="content-section">
+    <div class="content-section" id="board-section">
         <div>
             <img src="assets/img/icon-board.png">
         </div>
         <span>Board</span>
     </div>
-    <div class="content-section">
+    <div class="content-section" id="addtask-section">
         <div>
             <img src="assets/img/icon-addtask.png">
         </div>
         <span>Add Task</span>
     </div>
-    <div class="content-section">
+    <div class="content-section" id="contacts-section">
         <div>
             <img src="assets/img/icon-contacts.png">
         </div>
         <span>Contacts</span>
     </div>
-    <div class="content-section" style="margin-top: 180px;">
+    <div class="content-section" style="margin-top: 180px;" id="legalnotice-section">
         <div>
             <img src="assets/img/icon-info.png">
         </div>
