--- a/summary_style.css
+++ b/summary_style.css
@@ -15,94 +15,6 @@ body{
     position: relative;
 }
 
-@media(min-width: 1024px){
-    .nav-bar{
-        position: absolute;
-        top: 0;
-        left: 0;
-        background-color: #2A3647;
-        width: 16%;
-        height: 100vh;
-        box-sizing: border-box;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    
-    .nav-bar img{
-        width: 100px;
-        object-fit: contain;
-        margin-top: 66px;
-    }
-    
-    .content-section{
-        width: 100%;
-        height: 46px;
-        display: flex;
-        align-items: center;
-        color: white;
-        box-sizing: border-box;
-        padding-left: 18%;
-        margin: 4px 0px;
-    }
-    
-    .content-section:hover{
-        cursor: pointer;
-        background-color: #091931;
-    }
-    
-    .content-section div{
-        width: 30px;
-        display: flex;
-        justify-content: center;
-        margin-right: 10%;
-    }
-    
-    .content-section img{
-        height: 24px;
-        width: unset;
-        object-fit: contain;
-        margin: unset;
-    }
-    
-    .active-content-section{
-        background-color: #091931;
-    }
-    
-    .topper{
-        z-index: 1;
-        position: absolute;
-        top: 0;
-        right: 0;
-        background-color: white;
-        width: 84%;
-        height: 89px;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding-left: 8%;
-        padding-right: 33px;
-        box-sizing: border-box;
-        box-shadow: 0px 4px 2px -2px rgb(195, 195, 195);
-    }
-    
-    .img-topper{
-        display: flex;
-        align-items: center;
-    }
-    
-    .questionmark-topper{
-        width: 31px;
-        height: 31px;
-        margin-right: 24px;
-    }
-    
-    .profile-pic{
-        border-radius: 100%;
-        border: 1px solid black;
-    }
-}
-
 .inner-content{
     background-color: #F6F7F8;
     position: relative;
@@ -274,4 +186,10 @@ body{
 
 .d-none{
     display: none;
+}
+
+@media(max-width: 1024px){
+    .greeting{
+        display: none;
+    }
 }
