--- a/assets/templates/destop_template.html
+++ b/assets/templates/destop_template.html
@@ -1,40 +1,52 @@
-<div class="nav-bar">
-    <img src="assets/img/logo_lefter.png">
-    <div class="content-section" style="margin-top: 100px;" id="summary-section">
-        <div>
-            <img src="assets/img/icon-summary.png">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="assets/templates/destop_template_style.css">
+</head>
+<body>
+    <div class="nav-bar">
+        <img src="assets/img/logo_lefter.png">
+        <div class="content-section" style="margin-top: 100px;" id="summary-section">
+            <div>
+                <img src="assets/img/icon-summary.png">
+            </div>
+            <span>Summary</span>
         </div>
-        <span>Summary</span>
-    </div>
-    <div class="content-section" id="board-section">
-        <div>
-            <img src="assets/img/icon-board.png">
+        <div class="content-section" id="board-section">
+            <div>
+                <img src="assets/img/icon-board.png">
+            </div>
+            <span>Board</span>
         </div>
-        <span>Board</span>
-    </div>
-    <div class="content-section" id="addtask-section">
-        <div>
-            <img src="assets/img/icon-addtask.png">
+        <div class="content-section" id="addtask-section">
+            <div>
+                <img src="assets/img/icon-addtask.png">
+            </div>
+            <span>Add Task</span>
         </div>
-        <span>Add Task</span>
-    </div>
-    <div class="content-section" id="contacts-section">
-        <div>
-            <img src="assets/img/icon-contacts.png">
+        <div class="content-section" id="contacts-section">
+            <div>
+                <img src="assets/img/icon-contacts.png">
+            </div>
+            <span>Contacts</span>
         </div>
-        <span>Contacts</span>
-    </div>
-    <div class="content-section" style="margin-top: 180px;" id="legalnotice-section">
-        <div>
-            <img src="assets/img/icon-info.png">
+        <div class="content-section" style="margin-top: 180px;" id="legalnotice-section">
+            <div>
+                <img src="assets/img/icon-info.png">
+            </div>
+            <span>Legal notice</span>
         </div>
-        <span>Legal notice</span>
     </div>
-</div>
-<div class="topper">
-    <span>Kanban Project Management Tool</span>
-    <div class="img-topper">
-        <img src="assets/img/questionmark_topper.png" class="questionmark-topper">
-        <img src="assets/img/profile_pic.png" class="profile-pic">
+    <div class="topper">
+        <span>Kanban Project Management Tool</span>
+        <div class="img-topper">
+            <img src="assets/img/questionmark_topper.png" class="questionmark-topper">
+            <img src="assets/img/profile_pic.png" class="profile-pic">
+        </div>
     </div>
-</div>
+</body>
+</html>
