--- a/assets/templates/mobile_template.html
+++ b/assets/templates/mobile_template.html
@@ -1,30 +1,42 @@
-<div class="topper">
-    <img src="assets/img/Capa 2join-logo.png">
-    <img src="assets/img/profile_pic.png" class="profile-pic">
-</div>
-<div class="footer">
-    <div class="content-section" id="summary-section">
-        <div>
-            <img src="assets/img/icon-summary.png">
-        </div>
-        <span>Summary</span>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="assets/templates/mobile_template_style.css">
+</head>
+<body>
+    <div class="topper-mobile">
+        <img src="assets/img/Capa 2join-logo.png">
+        <img src="assets/img/profile_pic.png" class="profile-pic">
     </div>
-    <div class="content-section" id="board-section">
-        <div>
-            <img src="assets/img/icon-board.png">
+    <div class="footer">
+        <div class="content-section" id="summary-section-mobile">
+            <div>
+                <img src="assets/img/icon-summary.png">
+            </div>
+            <span>Summary</span>
         </div>
-        <span>Board</span>
-    </div>
-    <div class="content-section" id="addtask-section">
-        <div>
-            <img src="assets/img/icon-addtask.png">
+        <div class="content-section" id="board-section-mobile">
+            <div>
+                <img src="assets/img/icon-board.png">
+            </div>
+            <span>Board</span>
         </div>
-        <span>Add Task</span>
-    </div>
-    <div class="content-section" id="contacts-section">
-        <div>
-            <img src="assets/img/icon-contacts.png">
+        <div class="content-section" id="addtask-section-mobile">
+            <div>
+                <img src="assets/img/icon-addtask.png">
+            </div>
+            <span>Add Task</span>
         </div>
-        <span>Contacts</span>
+        <div class="content-section" id="contacts-section-mobile">
+            <div>
+                <img src="assets/img/icon-contacts.png">
+            </div>
+            <span>Contacts</span>
+        </div>
     </div>
-</div>
+</body>
+</html>
