--- a/assets/templates/mobile_template_style.css
+++ b/assets/templates/mobile_template_style.css
@@ -1,6 +1,14 @@
+.topper-mobile{
+    display: none;
+}
+
+.footer{
+    display: none;
+}
+
 @media(max-width: 1024px){
 
-    .topper{
+    .topper-mobile{
         z-index: 999;
         position: fixed;
         top: 0;
@@ -15,7 +23,7 @@
         box-shadow: 0px 4px 2px -2px rgb(195, 195, 195);
     }
 
-    .topper img{
+    .topper-mobile img{
         height: 39px;
         object-fit: contain;
     }
