--- a/assets/templates/destop_template.html
+++ b/assets/templates/destop_template.html
@@ -42,7 +42,7 @@
         </div>
     </div>
     <div class="topper">
-        <span>Kanban Project Management Tool</span>
+        <span style="font-size: small;">Kanban Project Management Tool</span>
         <div class="img-topper">
             <img src="assets/img/questionmark_topper.png" class="questionmark-topper">
             <img src="assets/img/profile_pic.png" class="profile-pic">
