--- a/assets/templates/destop_template.html
+++ b/assets/templates/destop_template.html
@@ -9,34 +9,34 @@
 </head>
 <body>
     <div class="nav-bar">
-        <img src="assets/img/logo_lefter.png">
+        <img src="assets/img/logo_lefter.svg">
         <div class="content-section" style="margin-top: 100px;" id="summary-section">
             <div>
-                <img src="assets/img/icon-summary.png">
+                <img src="assets/img/icon-summary.svg">
             </div>
             <span>Summary</span>
         </div>
         <div class="content-section" id="board-section">
             <div>
-                <img src="assets/img/icon-board.png">
+                <img src="assets/img/icon-board.svg">
             </div>
             <span>Board</span>
         </div>
         <div class="content-section" id="addtask-section">
             <div>
-                <img src="assets/img/icon-addtask.png">
+                <img src="assets/img/icon-addtask.svg">
             </div>
             <span>Add Task</span>
         </div>
         <div class="content-section" id="contacts-section">
             <div>
-                <img src="assets/img/icon-contacts.png">
+                <img src="assets/img/icon-contacts.svg">
             </div>
             <span>Contacts</span>
         </div>
         <div class="content-section" style="margin-top: 180px;" id="legalnotice-section">
             <div>
-                <img src="assets/img/icon-info.png">
+                <img src="assets/img/icon-info.svg">
             </div>
             <span>Legal notice</span>
         </div>
@@ -44,8 +44,8 @@
     <div class="topper">
         <span style="font-size: small;">Kanban Project Management Tool</span>
         <div class="img-topper">
-            <img src="assets/img/questionmark_topper.png" class="questionmark-topper">
-            <img src="assets/img/profile_pic.png" class="profile-pic">
+            <img src="assets/img/questionmark_topper.svg" class="questionmark-topper">
+            <img src="assets/img/profile_pic.svg" class="profile-pic">
         </div>
     </div>
 </body>
