--- a/assets/templates/mobile_template.html
+++ b/assets/templates/mobile_template.html
@@ -9,31 +9,31 @@
 </head>
 <body>
     <div class="topper-mobile">
-        <img src="assets/img/Capa 2join-logo.png">
-        <img src="assets/img/profile_pic.png" class="profile-pic">
+        <img src="assets/img/joinlogoBlack.svg">
+        <img src="assets/img/profile_pic.svg" class="profile-pic">
     </div>
     <div class="footer">
         <div class="content-section" id="summary-section-mobile">
             <div>
-                <img src="assets/img/icon-summary.png">
+                <img src="assets/img/icon-summary.svg">
             </div>
             <span>Summary</span>
         </div>
         <div class="content-section" id="board-section-mobile">
             <div>
-                <img src="assets/img/icon-board.png">
+                <img src="assets/img/icon-board.svg">
             </div>
             <span>Board</span>
         </div>
         <div class="content-section" id="addtask-section-mobile">
             <div>
-                <img src="assets/img/icon-addtask.png">
+                <img src="assets/img/icon-addtask.svg">
             </div>
             <span>Add Task</span>
         </div>
         <div class="content-section" id="contacts-section-mobile">
             <div>
-                <img src="assets/img/icon-contacts.png">
+                <img src="assets/img/icon-contacts.svg">
             </div>
             <span>Contacts</span>
         </div>
