help page summary

--- a/assets/templates/destop_template.html
+++ b/assets/templates/destop_template.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="assets/templates/destop_template_style.css">
+    <script src="script.js"></script>
 </head>
 <body>
     <div class="nav-bar">
@@ -44,7 +45,7 @@
     <div class="topper">
         <span style="font-size: small;">Kanban Project Management Tool</span>
         <div class="img-topper">
-            <img src="assets/img/questionmark_topper.svg" class="questionmark-topper">
+            <img src="assets/img/questionmark_topper.svg" onclick="showHelp()" id="help-button" class="questionmark-topper">
             <img src="assets/img/profile_pic.svg" class="profile-pic">
         </div>
     </div>
