help page as template

--- a/assets/templates/mobile_template.html
+++ b/assets/templates/mobile_template.html
@@ -13,25 +13,25 @@
         <img src="assets/img/profile_pic.svg" class="profile-pic">
     </div>
     <div class="footer">
-        <div class="content-section" id="summary-section-mobile">
+        <div class="content-section-mobile" id="summary-section-mobile">
             <div>
                 <img src="assets/img/icon-summary.svg">
             </div>
             <span>Summary</span>
         </div>
-        <div class="content-section" id="board-section-mobile">
+        <div class="content-section-mobile" id="board-section-mobile">
             <div>
                 <img src="assets/img/icon-board.svg">
             </div>
             <span>Board</span>
         </div>
-        <div class="content-section" id="addtask-section-mobile">
+        <div class="content-section-mobile" id="addtask-section-mobile">
             <div>
                 <img src="assets/img/icon-addtask.svg">
             </div>
             <span>Add Task</span>
         </div>
-        <div class="content-section" id="contacts-section-mobile">
+        <div class="content-section-mobile" id="contacts-section-mobile">
             <div>
                 <img src="assets/img/icon-contacts.svg">
             </div>
