--- a/assets/templates/destop_template_style.css
+++ b/assets/templates/destop_template_style.css
@@ -94,3 +94,13 @@
         display: none;
     }
 }
+
+@media(max-width: 1024px){
+    .nav-bar{
+        display: none;
+    }
+    
+    .topper{
+        display: none;
+    }
+}
