--- a/contacts_style.css
+++ b/contacts_style.css
@@ -30,7 +30,7 @@ h3 {
 .complete-page {
     display: flex;
     flex-direction: row;
-    height: 100vh;
+    height: 91vh;
 }
 
 /* Left side of Page  */
@@ -39,7 +39,6 @@ h3 {
     width: 35%;
     max-height: 90vh;
     background-color: rgb(255, 255, 255);
-    margin-top: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -51,6 +50,7 @@ h3 {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 10px;
 }
 
 .first-letter-box {
@@ -83,6 +83,7 @@ h3 {
 .single-contact:hover {
     background-color: rgb(42, 54, 71);
     color: white;
+    cursor: pointer;
 }
 
 .initials {
@@ -214,6 +215,10 @@ font-weight: 600;
     font-size: 12px;
 }
 
+.edit-contact:hover {
+    cursor: pointer;
+}
+
 .edit-contact img {
     height: 25px;
     margin-right: 10px;
@@ -228,11 +233,16 @@ margin-top: 30px;
     font-weight: 800;
 }
 
-.email-adress {
+.email-adress a{
     font-size: 12px;
     color: rgb(41, 171, 226);
     font-weight: 600;
     margin-top: 7px;
+    text-decoration: none;
+}
+
+.email-adress:hover {
+    cursor: pointer;
 }
 
 .phone-div {
@@ -244,6 +254,10 @@ margin-top: 30px;
     color: black;
     font-weight: 600;
     margin-top: 7px;
+}
+
+.phone-number:hover {
+    cursor: pointer;
 }
 
 .new-contact-button {
@@ -260,4 +274,127 @@ margin-top: 30px;
     .content-destop{
         display: none;
     }
+}
+
+
+
+/* Add Contact Style*/
+
+.add-contact-display {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.add-contact {
+    height: 56%;
+    width: 900px;
+    display: flex;
+    flex-direction: row;
+    position: relative;
+}
+
+.add-contact-design {
+    width: 40%;
+    background-color: rgb(42, 54, 71);
+    border-top-left-radius: 25px;
+    border-bottom-left-radius: 25px;
+    padding-left: 30px;
+    padding-right: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.add-contact-logo {
+    margin-bottom: 10px;
+}
+
+.add-contact-logo img {
+    height: 55px;
+}
+
+.add-contact-headline {
+    color: white;
+}
+
+.add-contact-headline h2 {
+    font-size: 50px;
+    font-weight: 600;
+}
+
+.add-contact-motivation {
+    color: white;
+    font-size: 21px;
+
+}
+
+.add-contact-line {
+    height: 2px;
+    background-color: rgb(41, 171, 226);
+    width: 25%;
+    margin-top: 2%;
+    margin-bottom: 20%;
+}
+
+.add-contact-fields {
+    width: 60%;
+    display: flex;
+    flex-direction: row;
+    background-color: rgb(255, 255, 255);
+    border-top-right-radius: 25px;
+    border-bottom-right-radius: 25px;
+}
+
+.close-x img {
+   position: absolute;
+   top: 20px;
+   right: 40px;
+   height: 26px;
+}
+
+.add-contact-image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 30%;
+    padding-bottom: 50px;
+}
+
+.add-contact-image img {
+    height: 100px;
+}
+
+.add-contact-input-fields {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 70%;
+    padding-top: 20px;
+}
+
+.name-field {
+    width: 90%;
+}
+
+.email-field {
+    width: 90%;
+    margin-top: 35px;
+}
+
+.phone-field {
+    width: 90%;
+    margin-top: 35px;
+}
+.add-contact-buttons {
+    display: flex;
+    flex-direction: row;
+    margin-top: 40px;
+}
+
+.add-contact-buttons img {
+    height: 50px;
+    margin-right: 30px;
 }
