--- a/assets/templates/mobile_template.html
+++ b/assets/templates/mobile_template.html
@@ -13,30 +13,38 @@
         <img src="assets/img/profile_pic.svg" class="profile-pic">
     </div>
     <div class="footer">
+        <a href="summary.html">
         <div class="content-section-mobile" id="summary-section-mobile">
             <div>
                 <img src="assets/img/icon-summary.svg">
             </div>
             <span>Summary</span>
         </div>
+    </a>
+        <a href="board.html">
         <div class="content-section-mobile" id="board-section-mobile">
             <div>
                 <img src="assets/img/icon-board.svg">
             </div>
             <span>Board</span>
         </div>
+    </a>
+        <a href="add_task.html">
         <div class="content-section-mobile" id="addtask-section-mobile">
             <div>
                 <img src="assets/img/icon-addtask.svg">
             </div>
             <span>Add Task</span>
         </div>
+    </a>
+        <a href="contacts.html">
         <div class="content-section-mobile" id="contacts-section-mobile">
             <div>
                 <img src="assets/img/icon-contacts.svg">
             </div>
             <span>Contacts</span>
         </div>
+    </a>
     </div>
 </body>
 </html>
