--- a/assets/templates/destop_template_style.css
+++ b/assets/templates/destop_template_style.css
@@ -12,6 +12,11 @@
         flex-direction: column;
         align-items: center;
     }
+
+    .nav-bar a{
+        text-decoration: none;
+        width: 100%;
+    }
     
     .nav-bar img{
         width: 100px;
@@ -88,6 +93,10 @@
     .profile-pic{
         border-radius: 100%;
         border: 1px solid black;
+    }
+
+    .profile-pic:hover{
+        cursor: pointer;
     }
 
     .d-none{
